# axum-api-template

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/lib/: configuration.rs  errors.rs  lib.rs  prelude.rs  response.rs  startup.rs  telemetry.rs
src/lib/routes/: health_check.rs  mod.rs
tests/api/: health_check.rs  helpers.rs  main.rs
