[package]
name = "axum-api-template"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "axum-api-template"
path = "src/bin/main.rs"

[lib]
name = "axum_api_template_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.8"
axum-extra = "0.12.5"
axum-macros = "0.5.0"
config = { version = "0.15.19", default-features = false, features = ["yaml"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
thiserror = "2.0.18"
tokio = { version = "1.45.1", features = [ "macros", "net", "rt-multi-thread", "signal" ] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [ "fs", "request-id", "trace" ] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [ "registry", "env-filter" ] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.13.2", features = [ "json" ] }
